# Stratagy

./: .gitignore  .zshrc.save  Book3.xlsx  CONTRIBUTIONS.md  LICENSE  Military_ranking.csv  README.md  electoral-democracy-index.csv  examine_excel.py  gdp per capita.csv  gini-index.csv  main.csv  main.py  model.py  pyproject.toml  seed_structural_democracy_data.csv
.history/: gdp per capita_20230811180748.csv  gdp per capita_20230811180918.csv  main_20230811145432.py  main_20230811145527.py  main_20230811151259.py  main_20230811152526.py  main_20230811152615.py
schema/: schema.json
tests/: test_core.py  test_main.py
